--- a/src/scss/pasarela-de-cobros.scss
+++ b/src/scss/pasarela-de-cobros.scss
@@ -7,6 +7,7 @@
 @use 'pasarela-payment_method.scss';
 @use 'pasarela-generate_payment.scss';
 @use 'phoneInputReact.scss';
+@use 'cardCheckout.scss';
 
 // Fix bug grilla con input radio
 .radio+.radio,
