--- a/src/scss/phoneInputReact.scss
+++ b/src/scss/phoneInputReact.scss
@@ -3,6 +3,19 @@ input.PhoneInputInput {
     border-color: transparent;
     font-size: 1rem;
     color: hsl(0, 0%, 21%);
+    font-family: BlinkMacSystemFont,
+        -apple-system,
+        "Segoe UI",
+        "Roboto",
+        "Oxygen",
+        "Ubuntu",
+        "Cantarell",
+        "Fira Sans",
+        "Droid Sans",
+        "Helvetica Neue",
+        "Helvetica",
+        "Arial",
+        sans-serif !important;
 
     &::placeholder {
         color: hsl(0, 0%, 60%);
