--- a/src/scss/cardCheckout.scss
+++ b/src/scss/cardCheckout.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Raleway:wght@100&display=swap');
 main.grid-checkout {
     display: grid;
     grid-template-areas: "nav nav nav" "form form form";
@@ -16,6 +17,37 @@ header {
 section {
     grid-area: form;
     margin: 10px 0;
+}
+.msk-logo{
+    justify-content: center;
+}
+.invoice-text{
+    color: #6474A6;
+    font-family: 'Inter';
+    
+}
+.title-type{
+    width: 593px;
+    // left: calc(50% - 593px/2 - 312.5px);
+    top: 11.48%;
+    bottom: 83.15%;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 38px;
+    display: flex;
+    align-items: center;
+
+    color: #374161;
+}
+
+.price-one{
+    color:#374161
+}
+
+.item-deail-text{
+    color:#374161;
 }
 
 form#cardCheckout {
@@ -44,10 +76,29 @@ form#cardCheckout {
     }
 
     .card_checkout__title {
-        margin: 0;
+        // margin: 0;
+        // font-size: 24px;
+        // text-align: center;
+
+        position: absolute;
+        width: 161px;
+        // left: calc(50% - 161px/2 - 39.5px);
+        top: 8.7%;
+        bottom: 85.93%;
+
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 400;
         font-size: 24px;
-        text-align: center;
+        line-height: 28px;
+        display: flex;
+        align-items: center;
+
+        color: #374161;
+
     }
+
+    
 
     .card_checkout__body {
         display: grid;
