--- a/src/scss/pasarela-de-cobros.scss
+++ b/src/scss/pasarela-de-cobros.scss
@@ -12,8 +12,8 @@
 @use './react-paginate.scss';
 
 // Fix bug grilla con input radio
-.radio+.radio,
-.button+.button {
+.radio + .radio,
+.button + .button {
   margin: 0;
 }
 
@@ -49,7 +49,7 @@ $texto-light: #808fa6;
   rotate: -90deg;
 }
 
-button.button>.ui.radio {
+button.button > .ui.radio {
   input[type='radio'] {
     visibility: hidden;
   }
@@ -106,7 +106,8 @@ header.container {
 
 .invisible {
   display: none !important;
-  -webkit-animation: scale-in-center 0.5s cubic-bezier(0.215, 0.61, 0.355, 1) both;
+  -webkit-animation: scale-in-center 0.5s cubic-bezier(0.215, 0.61, 0.355, 1)
+    both;
   animation: scale-in-center 0.5s cubic-bezier(0.215, 0.61, 0.355, 1) both;
   animation-play-state: paused;
 }
@@ -140,7 +141,7 @@ h2.title {
     min-height: 376px;
     height: max-content;
 
-    &>[class*='grid'] {
+    & > [class*='grid'] {
       flex-grow: 1;
       align-content: flex-start;
     }
@@ -234,7 +235,7 @@ h2.title {
     font-weight: 500;
   }
 
-  &>div {
+  & > div {
     justify-content: center;
     gap: 1rem;
   }
@@ -400,7 +401,7 @@ h2.title {
       }
     }
 
-    &.selection~.side-item-courses {
+    &.selection ~ .side-item-courses {
       display: block;
     }
 
@@ -743,7 +744,6 @@ h2.title {
 }
 
 .pasarela:has(pre) {
-
   flex-wrap: wrap;
 
   pre {
@@ -760,7 +760,6 @@ h2.title {
     border-radius: 5px;
   }
 }
-
 
 @media screen and (min-width: 767px) {
   .pasarela {
@@ -838,7 +837,7 @@ h2.title {
         }
       }
 
-      &>[class*='grid'] {
+      & > [class*='grid'] {
         overflow-y: scroll;
         grid-template-columns: 1fr;
         width: 100%;
@@ -979,7 +978,7 @@ h2.title {
       gap: 0.75rem;
     }
 
-    &>.title {
+    & > .title {
       display: none;
     }
 
@@ -994,7 +993,7 @@ h2.title {
         padding: 0;
       }
 
-      &-info>*:not(.numstep) {
+      &-info > *:not(.numstep) {
         display: none !important;
       }
 
@@ -1022,7 +1021,7 @@ h2.title {
         display: none;
       }
 
-      &.selection~.side-item-courses {
+      &.selection ~ .side-item-courses {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -1068,7 +1067,7 @@ h2.title {
   .pasarela-1.seleccion-de-cursos {
     padding: 0;
 
-    &>* {
+    & > * {
       padding-inline: 1rem;
     }
 
@@ -1098,6 +1097,10 @@ h2.title {
       display: none;
     }
 
+    &-selection.gift {
+      display: flex !important;
+    }
+
     &-content {
       gap: 6px;
 
@@ -1105,7 +1108,7 @@ h2.title {
         flex-flow: row nowrap;
         gap: 0.25rem;
 
-        &>* {
+        & > * {
           font-size: 0.5rem !important;
         }
       }
@@ -1192,7 +1195,7 @@ h2.title {
       display: none;
     }
 
-    &~* {
+    & ~ * {
       .pasarela {
         grid-template-columns: min(80vw, 272px) auto;
 
@@ -1220,7 +1223,7 @@ h2.title {
     }
   }
 
-  .is-expanded~.pasarela {
+  .is-expanded ~ .pasarela {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
@@ -1247,7 +1250,7 @@ h2.title {
     color: #257953;
   }
 
-  &>div.is-flex {
+  & > div.is-flex {
     gap: 1rem;
   }
 }
