Reestructuracion de variables, CTC, Rebill ARG

--- a/src/scss/pasarela-de-cobros.scss
+++ b/src/scss/pasarela-de-cobros.scss
@@ -9,6 +9,7 @@
 @use 'phoneInputReact.scss';
 @use 'cardCheckout.scss';
 @use 'pasarela-status.scss';
+@use 'pasarela-ctc.scss';
 
 // Fix bug grilla con input radio
 .radio+.radio,
