--- a/src/scss/pasarela-de-cobros.scss
+++ b/src/scss/pasarela-de-cobros.scss
@@ -10,6 +10,7 @@
 @use 'cardCheckout.scss';
 @use 'pasarela-status.scss';
 @use 'pasarela-ctc.scss';
+@use 'pasarela-ptp.scss';
 
 // Fix bug grilla con input radio
 .radio+.radio,
