--- a/src/scss/pasarela-ptp.scss
+++ b/src/scss/pasarela-ptp.scss
@@ -1,52 +1,67 @@
 #grid-ptp-payment {
-    display: grid;
-    gap: 1rem;
-    grid-template-areas: "docType" "nro_doc" "address" "email" "ptpSession" "ptpPayNow" "ptpLink";
+  display: grid;
+  gap: 1rem;
+  grid-template-areas: 'docType' 'nro_doc' 'address' 'email' 'phone' 'ptpSession' 'ptpPayNow' 'ptpLink';
 
-    @media (min-width: 768px) {
-        grid-template-areas: "docType nro_doc" "address email" "ptpSession ptpSession" "ptpPayNow ptpLink";
+  @media (min-width: 768px) {
+    grid-template-areas: 'docType nro_doc' 'address email' 'phone phone' 'ptpSession ptpSession' 'ptpPayNow ptpLink';
+  }
+
+  .select.is-link {
+    width: 100%;
+    height: 100%;
+
+    select {
+      width: 100%;
     }
 
-    .select.is-link {
-        width: 100%;
-        height: 100%;
+    &::after {
+      margin: 4px 0;
+    }
+  }
 
-        select {
-            width: 100%;
-        }
+  .select.is-danger {
+    width: 100%;
+    height: 100%;
 
-        &::after {
-            margin: 4px 0;
-        }
+    select {
+      width: 100%;
     }
 
-    #email {
-        grid-area: email;
+    &::after {
+      margin: 4px 0;
     }
+  }
 
-    #address {
-        grid-area: address;
-    }
+  #phone {
+    grid-area: phone;
+  }
 
-    #document_type {
-        grid-area: docType;
-    }
+  #email {
+    grid-area: email;
+  }
 
-    #dni {
-        grid-area: nro_doc;
-    }
+  #address {
+    grid-area: address;
+  }
 
-    #ptpSession {
-        grid-area: ptpSession;
-    }
+  #document_type {
+    grid-area: docType;
+  }
 
-    #ptpPayNow {
-        grid-area: ptpPayNow;
-    }
+  #dni {
+    grid-area: nro_doc;
+  }
 
-    #ptpLink {
-        grid-area: ptpLink;
-    }
+  #ptpSession {
+    grid-area: ptpSession;
+  }
 
+  #ptpPayNow {
+    grid-area: ptpPayNow;
+  }
 
+  #ptpLink {
+    grid-area: ptpLink;
+  }
 }
