--- a/src/scss/pasarela-ptp.scss
+++ b/src/scss/pasarela-ptp.scss
@@ -1,10 +1,10 @@
 #grid-ptp-payment {
   display: grid;
   gap: 1rem;
-  grid-template-areas: 'docType' 'nro_doc' 'address' 'email' 'phone' 'ptpSession' 'ptpPayNow' 'ptpLink';
+  grid-template-areas: 'docType' 'nro_doc' 'address' 'email' 'phone' 'rejectedSessionPTP' 'ptpSession' 'ptpPayNow' 'ptpLink';
 
   @media (min-width: 768px) {
-    grid-template-areas: 'docType nro_doc' 'address email' 'phone phone' 'ptpSession ptpSession' 'ptpPayNow ptpLink';
+    grid-template-areas: 'docType nro_doc' 'address email' 'phone phone' 'rejectedSessionPTP rejectedSessionPTP' 'ptpSession ptpSession' 'ptpPayNow ptpLink';
   }
 
   .select.is-link {
@@ -63,5 +63,9 @@
 
   #ptpLink {
     grid-area: ptpLink;
+  }
+
+  #rejectedSessionPTP{
+    grid-area: rejectedSessionPTP;
   }
 }
